Change branches specification

--- a/.github/workflows/matching_service.yml
+++ b/.github/workflows/matching_service.yml
@@ -3,8 +3,9 @@ name: Matching service
 on:
   push:
     paths: [ "/matching-service/**" ]
-    branches: "*"
-
+    branches: 
+      - "**"
+      
 jobs:
   build:
     runs-on: ubuntu-latest
