--- a/.github/workflows/user_service.yml
+++ b/.github/workflows/user_service.yml
@@ -3,7 +3,8 @@ name: User service
 on:
   push:
     paths: [ "/user-service/**" ]
-    branches: "*"
+    branches: 
+      - "**"
 
 jobs:
   build:
