--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -3,7 +3,8 @@ name: Frontend service
 on:
   push:
     paths: [ "/frontend/**" ]
-    branches: "*"
+    branches: 
+      - "**"
 
 jobs:
   build:
