--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -5,7 +5,6 @@ on:
     branches: 
       - '**'
 
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,4 +20,5 @@ jobs:
       run: |
         npm install
         npm ci
+        unset CI
         npm run build -if-present
