--- a/.github/workflows/user_service.yml
+++ b/.github/workflows/user_service.yml
@@ -2,7 +2,6 @@ name: User service
 
 on:
   push:
-    paths: [ "user-service/**" ]
     branches: 
       - '**'
 
@@ -21,4 +20,5 @@ jobs:
       run: |
         npm install
         npm ci
+        unset CI
         npm run build -if-present
