--- a/user-service/package.json
+++ b/user-service/package.json
@@ -7,16 +7,16 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "test": "mocha ./tests/*.js --timeout 10000"
+    "test": "time mocha ./tests/*.js --timeout 10000 --exit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.19",
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
-    "mocha": "^2.5.3"
+    "mocha": "^10.0.0",
+    "nodemon": "^2.0.19"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
