--- a/user-service/package.json
+++ b/user-service/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "test": "time mocha ./tests/*.js --timeout 10000 --exit"
+    "test": "export ENV=TEST && time mocha ./tests/*.js --timeout 10000 --exit"
   },
   "keywords": [],
   "author": "",
